merge all commit to my forked repo (#1)
* HBASE-23136 (#712)

* HBASE-23136 PartionedMobFileCompactor bulkloaded files shouldn't get replicated (addressing buklload replication related issue raised in HBASE-22380)

Signed-off-by: Josh Elser <elserj@apache.org>

* HBASE-23042 Parameters are incorrect in procedures jsp (#728)

* HBASE-23172 HBase Canary region success count metrics reflect column family successes, not region successes

* HBASE-23012 Add HBase 1.3.6 to the downloads page (#738)

* HBASE-22679 : Revamping CellUtil (#735)

* HBASE-22679 : Revamping CellUtil

* checkstyle fix

* incorporating review

* minor indentation

* HBASE-22460 : Reopen regions with very high Store Ref Counts (#600)

Signed-off-by Anoop Sam John <anoopsamjohn@apache.org>

* HBASE-15519 Add per-user metrics with lossy counting

Introducing property hbase.regionserver.user.metrics.enabled(Default:true)
to disable user metrics in case it accounts for any performance issues

Close #661

Signed-off-by: Josh Elser <elserj@apache.org>

* HBASE-23207 Log a region open journal (#751)

Signed-off-by: Abhishek Singh Chouhan <achouhan@apache.org>

* HBASE-23073 Add an optional costFunction to balance regions according to a capacity rule (#677)

Signed-off-by: Wellington Chevreuil <wchevreuil@apache.org>

* HBASE-23012 Addendum - Update 1.3.6 Release date in the downloads page

* HBASE-23203 NPE in RSGroup info (#747)

Signed-off-by: Duo Zhang <zhangduo@apache.org>

* HBASE-23194 Remove unused methods from TokenUtil (#737)

Signed-off-by: Peter Somogyi <psomogyi@apache.org>

* HBASE-22991 add HBase 1.4.11 to the downloads page.

closes #756

Signed-off-by: Jan Hentschel <jan.hentschel@ultratendency.com>

* HBASE-23181 Blocked WAL archive: "LogRoller: Failed to schedule flush of XXXX, because it is not online on us" (#753)

Signed-off-by: Lijin Bin <binlijin@apache.org>
Signed-off-by: stack <stack@apache.org>

* HBASE-23216 Add 2.2.